--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.54.4"
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.1",
     "@types/node": "18.7.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
